--- a/nacos-discovery/nacos-restful-consumer/pom.xml
+++ b/nacos-discovery/nacos-restful-consumer/pom.xml
@@ -11,5 +11,15 @@
     <artifactId>nacos-restful-consumer</artifactId>
     <name>nacos-restful-consumer</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
