--- a/nacos-discovery/nacos-dubbo-service2/service2-api/.gitignore
+++ b/nacos-discovery/nacos-dubbo-service2/service2-api/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/test/
+!**/src/test/**/target/
 
 ### STS ###
 .apt_generated
