--- a/nacos-discovery/pom.xml
+++ b/nacos-discovery/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>nacos-restful-consumer</module>
         <module>nacos-restful-provider</module>
+        <module>nacos-dubbo-service2</module>
     </modules>
 
 
